--- a/Infra/Helm/templates/service.yaml
+++ b/Infra/Helm/templates/service.yaml
@@ -1,12 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "tmf635-usage.fullname" . }}
+  name: {{ include "expressjs-k8s.fullname" . }}
   labels:
-    app: {{ template "tmf635-usage.name" . }}
-    chart: {{ template "tmf635-usage.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    {{- include "expressjs-k8s.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -15,5 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: {{ template "tmf635-usage.name" . }}
-    release: {{ .Release.Name }}
+    {{- include "expressjs-k8s.selectorLabels" . | nindent 4 }}
