--- a/Infra/Kubernetes_Yaml/expressjs.yaml
+++ b/Infra/Kubernetes_Yaml/expressjs.yaml
@@ -1,34 +1,23 @@
-# Deployment
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: express-app-deployment
+  name: nginx-deployment
+  labels:
+    app: web
 spec:
-  replicas: 3
   selector:
     matchLabels:
-      app: express-app
+      app: web
+  replicas: 5
+  strategy:
+    type: RollingUpdate
   template:
     metadata:
       labels:
-        app: express-app
+        app: web
     spec:
       containers:
-        - name: express-app
-          image: your-express-app-image:latest
+       —name: nginx
+          image: nginx
           ports:
-            - containerPort: 3000
-
-# Service
-apiVersion: v1
-kind: Service
-metadata:
-  name: express-app-service
-spec:
-  selector:
-    app: express-app
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 3000
-
+           —containerPort: 80
