--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,12 +29,11 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Build, tag, and push image to Amazon ECR
-      working-directory: Application/api-with-express-and-handlebars
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: docker_nodejs_demo
-        IMAGE_TAG: nodejs_demo_image
+    - name: Build and Push Docker images
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./Application/api-with-express-and-handlebar
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        for dockerfile in $(find . -name "Dockerfile" -type f); do
+          dir=$(dirname $dockerfile)
+          tag=your-dockerhub-username/$(basename $dir):${{ github.sha }}
+          docker build -t $tag $dir
+          docker push $tag
+        done
