--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,15 +29,18 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
+    - name: List dir
+      run: tree -h
+
     - name: Set Docker context
       run: echo "DOCKER_CONTEXT=${GITHUB_WORKSPACE}/Application/api-with-express-and-handlebars" >> $GITHUB_ENV
 
-    - name: Build and Push Docker images
-      env:
-        DOCKERFILE_PATH: ${{ env.DOCKER_CONTEXT }}/Dockerfile
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: docker_nodejs_demo
-        IMAGE_TAG: nodejs_demo_image
-      run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f $DOCKERFILE_PATH
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+    # - name: Build and Push Docker images
+    #   env:
+    #     DOCKERFILE_PATH: ${{ env.DOCKER_CONTEXT }}/Dockerfile
+    #     ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+    #     ECR_REPOSITORY: docker_nodejs_demo
+    #     IMAGE_TAG: nodejs_demo_image
+    #   run: |
+    #     docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f $DOCKERFILE_PATH
+    #     docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
