--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,10 +30,15 @@ jobs:
       uses: aws-actions/amazon-ecr-login@v1
 
     - name: List dir
-      run: tree -h
+      run: |
+        tree -h
+        ls .
+        pwd
+        cd ..
+        ls
 
     - name: Create environment file with Docker context
-      run: echo "DOCKER_CONTEXT=/Application/api-with-express-and-handlebars" >> $GITHUB_ENV
+      run: echo "DOCKER_CONTEXT=./Application/api-with-express-and-handlebars" >> $GITHUB_ENV
 
     - name: Build and Push Docker images
       env:
