--- a/Infra/Kubernetes_Yaml/test.yaml
+++ b/Infra/Kubernetes_Yaml/test.yaml
@@ -1,19 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: lifebitdemo-deployment
 spec:
   replicas: 5
   selector:
     matchLabels:
-      app: nginx
+      app: lifebitdemo
   template:
     metadata:
       labels:
-        app: nginx
+        app: lifebitdemo
     spec:
       containers:
         - name: express
           image: 961146733711.dkr.ecr.us-west-2.amazonaws.com/lifebit-dev-default-ecrrepo-01:202307231554
           ports:
             - containerPort: 3000
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: lifebitdemo-service
+spec:
+  selector:
+    app: lifebitdemo
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 3000
+  type: LoadBalancer
