--- a/Infra/Helm/Node/templates/service.yaml
+++ b/Infra/Helm/Node/templates/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "my-express-app-chart.fullname" . }}
+  name: {{ .Values.app.name }}
 spec:
   selector:
-    app: {{ include "my-express-app-chart.fullname" . }}
+    app: {{ .Values.app.name }}
   ports:
     - protocol: TCP
       port: {{ .Values.service.port }}
