--- a/Infra/Kubernetes_Yaml/test.yaml
+++ b/Infra/Kubernetes_Yaml/test.yaml
@@ -17,7 +17,13 @@ spec:
           image: 961146733711.dkr.ecr.us-west-2.amazonaws.com/lifebit-dev-default-ecrrepo-01:202307231554
           ports:
             - containerPort: 3000
-
+          resources:
+            requests:
+              cpu: "100m"  # 100 milliCPU (0.1 CPU)
+              memory: "256Mi"  # 256 MiB
+            limits:
+              cpu: "500m"  # 500 milliCPU (0.5 CPU)
+              memory: "512Mi"  # 512 MiB
 ---
 
 apiVersion: v1
@@ -32,3 +38,26 @@ spec:
       port: 80
       targetPort: 3000
   type: LoadBalancer
+
+---
+
+---
+
+apiVersion: autoscaling/v2beta2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: lifebitdemo-hpa
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: lifebitdemo-deployment
+  minReplicas: 2
+  maxReplicas: 10
+  metrics:
+    - type: Resource
+      resource:
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 50  # Target average CPU utilization percentage (adjust as needed)
